# MirrorModel

./: .gitignore  CMakeLists.txt  README.md
mirrormod/: CMakeLists.txt
mirrormod/include/: mirrormod.h
mirrormod/src/: gltfparser.cpp  mirparser.cpp  mirwriter.cpp  objparser.cpp
tests/: CMakeLists.txt  mirparser_tests.cpp  mirwriter_tests.cpp  objparser_tests.cpp
